# broder

./: .env  .env.example  .gitattributes  .gitignore  .tmp_get_digest.py  Makefile  README.md  docker-compose.apps.yml  docker-compose.infra.yml  docker-compose.yml  local_worker.py  requirements-vision.txt  vision_worker.py
backend/: Dockerfile  (+1 more)
core/rs/: ARCHITECTURE.md  Cargo.toml  README.md
core/rs/apps/transport-simulator/: Cargo.toml
core/rs/apps/transport-simulator/src/: main.rs
core/rs/apps/video-viewer/: Cargo.toml
core/rs/apps/video-viewer/src/: config.rs  logger.rs  main.rs  viewer.rs
core/rs/apps/vision-inference/: Cargo.toml
core/rs/apps/vision-inference/src/: classes.rs  config.rs  dashboard.rs  display.rs  logger.rs  main.rs  persistence.rs  security.rs  spatial_config.rs  stream.rs  yolo.rs
core/rs/apps/vision-inference/web/: Dockerfile  index.html  nginx.conf
core/rs/crates/event-core/: Cargo.toml
core/rs/crates/event-core/src/: lib.rs
core/rs/crates/persistence-core/: Cargo.toml
core/rs/crates/persistence-core/src/: lib.rs
core/rs/crates/persistence-postgres/: Cargo.toml
core/rs/crates/persistence-postgres/migrations/: 0001_temporal_vision_detection.sql
core/rs/crates/persistence-postgres/src/: lib.rs  vision_detection.rs
core/rs/crates/spatial-core/: Cargo.toml
core/rs/crates/spatial-core/src/: error.rs  geometry.rs  lib.rs  model.rs  spatializer.rs
core/rs/crates/spatial-core/tests/: spatial.rs
core/rs/crates/tracking-core/: Cargo.toml
core/rs/crates/tracking-core/src/: association.rs  config.rs  error.rs  lib.rs  model.rs  tracker.rs
core/rs/crates/tracking-core/tests/: tracker.rs
core/rs/crates/transport-core/: Cargo.toml
core/rs/crates/transport-core/src/: lib.rs
core/rs/crates/transport-core/src/domain/: connection.rs  conveyor.rs  event.rs  ids.rs  mod.rs  object.rs  plant.rs
core/rs/crates/transport-core/src/movement/: mod.rs
core/rs/crates/transport-core/src/repository/: memory.rs  mod.rs
core/rs/crates/transport-core/src/topology/: mod.rs
core/rs/crates/transport-core/tests/: topology.rs
core/rs/crates/vision-core/: Cargo.toml
core/rs/crates/vision-core/src/: detection.rs  lib.rs  nms.rs  sampler.rs
core/rs/crates/vision-core/tests/: vision.rs
(+27 files in other folders)
