[package]
name = "vision-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
event-core = { path = "../../crates/event-core" }
persistence-core = { path = "../../crates/persistence-core" }
persistence-postgres = { path = "../../crates/persistence-postgres" }
spatial-core = { path = "../../crates/spatial-core" }
tracking-core = { path = "../../crates/tracking-core" }
vision-core = { path = "../../crates/vision-core" }
opencv = { version = "0.99", default-features = false, features = [
    "clang-runtime",
    "dnn",
    "highgui",
    "imgproc",
    "videoio",
] }
